# windi-test-task

./: .env  .gitignore  README.md  REST.postman_collection.json  alembic.ini  docker-compose.yml  generate_test_data.py  pyproject.toml
src/: config.py
src/core/models/: chat.py  message.py  user.py
src/domain/exceptions/: access.py  validation.py
src/domain/models/: chat.py  group.py  message.py  user.py
src/domain/services/: chat_service.py  user_service.py
src/entrypoints/webapp/: Dockerfile  entrypoint.sh  main.py
src/entrypoints/webapp/dependencies/: database.py  services.py
src/entrypoints/webapp/managers/: chat_connection_manager.py
src/entrypoints/webapp/managers/chat_method_handlers/: abc.py  read_message_handler.py  send_message_handler.py
src/entrypoints/webapp/middlewares/: auth.py
src/entrypoints/webapp/models/: chat.py  message.py  pagination.py  user.py  web_socket_payload.py
src/entrypoints/webapp/routers/rest/: rest_router.py
src/entrypoints/webapp/routers/ws/: chats.py
src/persistence/postgres/connection/: connection.py  metadata.py
src/persistence/postgres/migrations/: env.py
src/persistence/postgres/migrations/versions/: 2025_05_13_2137-4362fd89930a_init.py  2025_05_14_1734-b9e0ff8c1b0b_init.py  2025_05_14_1837-a745e4ce0717_init.py  2025_05_17_1528-9bec1b8d7e37_added_columns_for_groups.py  (+3 more)
src/persistence/postgres/repositories/: chat.py  group.py  message.py  user.py
src/persistence/postgres/schema/: __init__.py  chats.py  groups.py  messages.py  users.py
src/ports/repositories/: abc.py
(+3 files in other folders)
