[project]
name = "solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pydantic[email]>=2.11.4",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]
